fix header layout and z-index

--- a/src/components/Guarantee/Guarantee.module.scss
+++ b/src/components/Guarantee/Guarantee.module.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   height: 100vh;
   background-color: $background-red;
-  padding: 10vh 20vw;
+  padding: 10vh 15vw;
 
   &__content {
     position: relative;
